added nats ingress

--- a/nats/ingress.yaml
+++ b/nats/ingress.yaml
@@ -11,5 +11,4 @@ spec:
         backend:
           service:
             name: nats
-            port:
-              name: monitor
+            port: 8222
