--- a/whoami/ingress.yaml
+++ b/whoami/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: whoami
+  annotations:
+    kubernetes.io/ingress.class: traefik
 spec:
   rules:
   - http:
