--- a/whoami/ingress.yaml
+++ b/whoami/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   - http:
       paths:
       - path: /whoami
-        pathType: Exact
+        pathType: Prefix
         backend:
           service:
             name: whoami
