--- a/traefik/config.yaml
+++ b/traefik/config.yaml
@@ -1,3 +1,4 @@
+# source: https://github.com/ubuntu/microk8s/issues/1851
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -42,6 +43,8 @@ spec:
             add:
             - NET_BIND_SERVICE
         args:
+        # kubernetescrd added 
+        - --providers.kubernetescrd
         - --providers.kubernetesingress=true
         - --providers.kubernetesingress.ingressendpoint.ip=127.0.0.1
         - --api.dashboard=true
