traefik next try with middelware

--- a/whoami/ingress.yaml
+++ b/whoami/ingress.yaml
@@ -8,8 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /whoami
-        pathType: Prefix
+      - path: /
         backend:
           service:
             name: whoami
