--- a/traefik/deployment.yaml
+++ b/traefik/deployment.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: default
   name: traefik-ingress-controller
 
 ---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
+  namespace: default
   name: traefik
   labels:
     app: traefik
@@ -24,59 +26,23 @@ spec:
       serviceAccountName: traefik-ingress-controller
       containers:
         - name: traefik
-          image: traefik:v2.3
+          image: traefik:v2.5
           args:
-            - --log.level=DEBUG
-            - --api
             - --api.insecure
-            - --entrypoints.web.address=:80
-            - --entrypoints.tcpep.address=:8000
-            #- --entrypoints.udpep.address=:9000/udp
+            - --accesslog
+            - --entrypoints.web.Address=:8000
+            - --entrypoints.websecure.Address=:4443
             - --providers.kubernetescrd
+            - --certificatesresolvers.myresolver.acme.tlschallenge
+            - --certificatesresolvers.myresolver.acme.email=foo@you.com
+            - --certificatesresolvers.myresolver.acme.storage=acme.json
+            # Please note that this is the staging Let's Encrypt server.
+            # Once you get things working, you should remove that whole line altogether.
+            - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
           ports:
             - name: web
-              containerPort: 80
+              containerPort: 8000
+            - name: websecure
+              containerPort: 4443
             - name: admin
               containerPort: 8080
-            - name: tcpep
-              containerPort: 8000
-            #- name: udpep
-            #  containerPort: 9000
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: traefik
-spec:
-  type: LoadBalancer
-  selector:
-    app: traefik
-  ports:
-    - protocol: TCP
-      port: 80
-      name: web
-      targetPort: 80
-    - protocol: TCP
-      port: 8080
-      name: admin
-      targetPort: 8080
-    - protocol: TCP
-      port: 8000
-      name: tcpep
-      targetPort: 8000
-
----
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: traefikudp
-#spec:
-#  type: LoadBalancer
-#  selector:
-#    app: traefik
-#  ports:
-#    - protocol: UDP
-#      port: 9000
-#      name: udpep
-#      targetPort: 9000
