added version to whoami

--- a/whoami/ingressroutes.yaml
+++ b/whoami/ingressroutes.yaml
@@ -19,6 +19,7 @@ kind: IngressRoute
 metadata:
   name: ingressroutetls
   namespace: default
+  version: '0.1'
 spec:
   entryPoints:
     - websecure
