added whoami to demo

--- a/demo/deployment.yaml
+++ b/demo/deployment.yaml
@@ -29,3 +29,21 @@ spec:
         - name: demo-nginx-configs
           configMap:
             name: demo-nginx-config
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: whoami
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: whoami
+  template:
+    metadata:
+      labels:
+        app: whoami
+    spec:
+      containers:
+      - name: whoami
+        image: traefik/whoami
