--- a/demo/ingress.yaml
+++ b/demo/ingress.yaml
@@ -7,7 +7,6 @@ spec:
   - host: test.imicros.de # CHANGE ME!
     http:
       paths:
-      # The * is needed so that all traffic gets redirected to nginx
       - path: /demo
         pathType: Prefix
         backend:
@@ -15,3 +14,11 @@ spec:
             name: demo-nginx
             port:
               number: 80
+      - path: /whoami
+        pathType: Prefix
+        backend:
+          service:
+            name: whoami
+            port:
+              number: 80
+              
