--- a/demo/service.yaml
+++ b/demo/service.yaml
@@ -8,3 +8,15 @@ spec:
   ports:
   - protocol: "TCP"
     port: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: whoami
+spec:
+  ports:
+  - name: http
+    targetPort: 80
+    port: 80
+  selector:
+    app: whoami
