correction demo ingress

--- a/demo/ingress.yaml
+++ b/demo/ingress.yaml
@@ -21,4 +21,11 @@ spec:
             name: whoami
             port:
               number: 80
+      - path: /
+        pathType: Exact
+        backend:
+          service:
+            name: demo-nginx
+            port:
+              number: 80
               
