--- a/demo/ingress.yaml
+++ b/demo/ingress.yaml
@@ -28,4 +28,13 @@ spec:
             name: demo-nginx
             port:
               number: 80
+    http:
+      paths:
+      - path: /
+        pathType: Exact
+        backend:
+          service:
+            name: whoami
+            port:
+              number: 80
               
