--- a/demo/service.yaml
+++ b/demo/service.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   selector:
     app: demo-nginx
+  type: LoadBalancer
   ports:
   - protocol: "TCP"
     port: 80
@@ -14,9 +15,10 @@ kind: Service
 metadata:
   name: whoami
 spec:
+  selector:
+    app: whoami
+  type: LoadBalancer
   ports:
   - name: http
     targetPort: 80
     port: 80
-  selector:
-    app: whoami
