--- a/demo/ingress.yaml
+++ b/demo/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: demo-nginx
+  namespace: ingress
 spec:
   rules:
   - host: test.imicros.de # CHANGE ME!
