--- a/demo/ingress-me.yaml
+++ b/demo/ingress-me.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: demo-me
-  namespace: default
+  namespace: default    # namespace must be the same as the backend service!
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
