--- a/demo/ingress-me.yaml
+++ b/demo/ingress-me.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default    # namespace must be the same as the backend service!
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: letsencrypt
 spec:
   rules:
   - host: test.imicros.de # CHANGE ME!
@@ -17,4 +18,7 @@ spec:
             name: whoami
             port:
               number: 80
-              
+  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
+  - hosts:
+    - test.imicros.de
+    secretName: imicros-cert # < cert-manager will store the created certificate in this secret.              
