--- a/demo/ingress-me.yaml
+++ b/demo/ingress-me.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default    # namespace must be the same as the backend service!
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    cert-manager.io/cluster-issuer: letsencrypt
+    cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
   rules:
   - host: test.imicros.de # CHANGE ME!
