demo tls ingress added annotations

--- a/demo/ingress-me.yaml
+++ b/demo/ingress-me.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: letsencrypt-staging
+    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   rules:
   - host: test.imicros.de # CHANGE ME!
