--- a/app/ingress.yaml
+++ b/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: imicros-app
   namespace: default    # namespace must be the same as the backend service!
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
     acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
@@ -12,7 +12,14 @@ spec:
   - host: test.imicros.de # CHANGE ME!
     http:
       paths:
-      - path: /app(/|$)(.*)
+      - path: /(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: imicros-app
+            port:
+              number: 80
+      - path: /app/(.*)
         pathType: Prefix
         backend:
           service:
