--- a/gateway/ingress.yaml
+++ b/gateway/ingress.yaml
@@ -2,40 +2,24 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: imicros-gateway
+  namespace: default    # namespace must be the same as the backend service!
   annotations:
-    kubernetes.io/ingress.class: traefik
-#   Keiner der Versuche funktioniert -> Fehlermeldung: Middleware existiert nicht....
-#   Daher /api als default path in imicros-gateway konfiguriert!
-#    traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix
-#    traefik.ingress.kubernetes.io/router.middlewares: stripprefix@kubernatescrd
-#    traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix@kubernates
-#    traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix@kubernetes
-#    traefik.ingress.kubernetes.io/router.middlewares: stripprefix@kubernetes
-#    traefik.ingress.kubernetes.io/request-modifier: "ReplacePath: /api"
-#    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
-#    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetes
-#    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix
-#    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd
-#    traefik.ingress.kubernetes.io/router.middlewares: traefik-api@kubernetes
-#    traefik.ingress.kubernetes.io/router.middlewares: traefik-api@kubernetescrd
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: letsencrypt
+    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   rules:
-    - host: home.server
-      http:
-        paths:
-          - path: /api
-            pathType: Prefix
-            backend:
-              service:
-                name:  imicros-gateway
-                port:
-                  number: 3000
-    - http:
-        paths:
-          - path: /api
-            pathType: Prefix
-            backend:
-              service:
-                name:  imicros-gateway
-                port:
-                  number: 3000
+  - host: test.imicros.de # CHANGE ME!
+    http:
+      paths:
+      - path: /api/(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: imicros-gateway
+            port:
+              number: 80
+  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
+  - hosts:
+    - test.imicros.de
+    secretName: imicros-cert # < cert-manager will store the created certificate in this secret.              
