--- a/user/deployment.yaml
+++ b/user/deployment.yaml
@@ -12,7 +12,7 @@ spec:
     metadata:
       labels:
         app: imicros-users
-        version: '0.1
+        version: '0.1'
     spec:
       containers:
       - name: imicros-users
