--- a/user/deployment.yaml
+++ b/user/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         imagePullPolicy: Always
         env:
         - name: SERVICES
-          value: "master, user, groups, agents"
+          value: "master, user, groups, agents, acl"
         - name: MASTER_TOKEN
           value: "zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
         - name: SERVICE_TOKEN
@@ -48,6 +48,10 @@ spec:
           value: "neo4j"
         - name: NEO4J_PASSWORD
           value: "neo4j"
+        # jwt secret -> acl
+        - name: JWT_SECRET
+          value: "zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
+        # jwt secret -> agents
         - name: AGENTS_JWT_SECRET
           value: "my JWT secret - should be set as a Kubernetes secret"
         - name: EVENT_OWNER_ID
