--- a/dev/cert-manager/ingress-me.yaml
+++ b/dev/cert-manager/ingress-me.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: letsencrypt
-    # acme.cert-manager.io/http01-edit-in-place: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   rules:
   - host: dev.imicros.de # CHANGE ME!
