correction dev/certs

--- a/dev/demo/ingress.yaml
+++ b/dev/demo/ingress.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: default    # namespace must be the same as the backend service!
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/force-ssl-redirect: \"false\"
 spec:
   rules:
-  - host: dev.imicros.de # CHANGE ME!
-    http:
+  - http:
       paths:
       - path: /demo
         pathType: Prefix
