--- a/dev/cert-manager/ingress-me.yaml
+++ b/dev/cert-manager/ingress-me.yaml
@@ -4,7 +4,6 @@ metadata:
   name: demo-me
   namespace: default    # namespace must be the same as the backend service!
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
     cert-manager.io/cluster-issuer: letsencrypt
     acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
@@ -12,7 +11,7 @@ spec:
   - host: dev.imicros.de # CHANGE ME!
     http:
       paths:
-      - path: /me(/|$)(.*)
+      - path: /me
         pathType: Prefix
         backend:
           service:
