--- a/dev/demo/ingress.yaml
+++ b/dev/demo/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - http:
+  - host: dev.imicros.de # CHANGE ME!
+    http:
       paths:
       - path: /demo
         pathType: Prefix
