--- a/dev/kube-dashboard/ingress.yaml
+++ b/dev/kube-dashboard/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kube-dashboard
-  namespace: default    # namespace must be the same as the backend service!
+  namespace: kube-system    # namespace must be the same as the backend service!
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
