corrected dev/kube

--- a/dev/kube-dashboard/ingress.yaml
+++ b/dev/kube-dashboard/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   rules:
@@ -18,7 +19,7 @@ spec:
           service:
             name: kubernetes-dashboard
             port:
-              number: 443
+              number: 8443
   tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
   - hosts:
     - dev.imicros.de
