--- a/dev/kube-dashboard/ingress.yaml
+++ b/dev/kube-dashboard/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   rules:
   - host: dev.imicros.de # CHANGE ME!
