--- a/dev/minio/deployment.yaml
+++ b/dev/minio/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         args:
         - server 
         - /storage 
-        - --console-address ":9001"
+        - "--console-address \":9001\""
         env:
         - name: MINIO_ROOT_USER
           valueFrom:
