corrected dev/minio

--- a/dev/minio/deployment.yaml
+++ b/dev/minio/deployment.yaml
@@ -33,7 +33,7 @@ spec:
               key: password
         - name: MINIO_REGION_NAME
           value: "eu-central-1"
-        command: ["minio server /mnt/storage --console-address ':9001'"]
+        args: ["server", "/storage", "--console-address ':9001'"]
         ports:
         - name: api
           containerPort: 9000
@@ -42,4 +42,4 @@ spec:
           containerPort: 9001
         volumeMounts:
         - name: storage # must match the volume name, above
-          mountPath: "/mnt/storage"
+          mountPath: "/storage"
