corrected dev/minio

--- a/dev/minio/deployment.yaml
+++ b/dev/minio/deployment.yaml
@@ -33,7 +33,9 @@ spec:
               key: password
         - name: MINIO_REGION_NAME
           value: "eu-central-1"
-        args: ["server", "/storage", "\-\-console-address ':9001'"]
+        args:
+        - server |
+                  /storage --console-address ':9001'
         ports:
         - name: api
           containerPort: 9000
