corrected dev/minio

--- a/dev/minio/deployment.yaml
+++ b/dev/minio/deployment.yaml
@@ -33,8 +33,9 @@ spec:
               key: password
         - name: MINIO_REGION_NAME
           value: "eu-central-1"
-        command: 
-        - "minio server /storage"
+        args:
+        - server 
+        - /storage
         # - "minio server /storage --console-address :9001"
         ports:
         - name: api
