--- a/dev/minio/deployment.yaml
+++ b/dev/minio/deployment.yaml
@@ -37,13 +37,12 @@ spec:
         command: 
         - "/bin/sh"
         - "-ce"
-        - "/usr/bin/docker-entrypoint.sh minio server /storage -S /etc/minio/certs/ --address :9000 --console-address dev.imicros.de:9001"
+        - "/usr/bin/docker-entrypoint.sh minio server /storage -S /etc/minio/certs/ --address :9000 --console-address :9001"
         # - "minio server /storage --console-address :9001"
         ports:
         - name: api
           containerPort: 9000
         - name: console
-          protocol: TCP
           containerPort: 9001
         volumeMounts:
         - name: storage # must match the volume name, above
