--- a/dev/minio/ingress.yaml
+++ b/dev/minio/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
-    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
   - host: dev.imicros.de # CHANGE ME!
