--- a/dev/neo4j/ingress.yaml
+++ b/dev/neo4j/ingress.yaml
@@ -4,22 +4,29 @@ metadata:
   name: neo4j-browser
   namespace: default    # namespace must be the same as the backend service!
   annotations:
-    # nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
-    nginx.ingress.kubernetes.io/backend-protocol: HTTP
+    # nginx.ingress.kubernetes.io/backend-protocol: HTTP
     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
   - host: dev.imicros.de # CHANGE ME!
     http:
       paths:
-      - path: /browser/
+      - path: /neo4j/(.*)
         pathType: Prefix
         backend:
           service:
             name: neo4j
             port:
               number: 7474
+      - path: /bolt/(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: neo4j
+            port:
+              number: 7687
   tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
   - hosts:
     - dev.imicros.de
