--- a/dev/neo4j/service.yaml
+++ b/dev/neo4j/service.yaml
@@ -10,6 +10,10 @@ spec:
     port: 7474
     targetPort: 7474
     protocol: TCP
+  - name: https
+    port: 7473
+    targetPort: 7473
+    protocol: TCP
   - name: bolt
     port: 7687
     targetPort: 7687
