corrected dev/nats

--- a/dev/nats/deployment.yaml
+++ b/dev/nats/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - name: nats
         image: nats
         command: 
-        - "nats-main --user admin --pass xyz
+        - "nats-main --user admin --pass xyz"
         args:
         #- server
         env:
