--- a/dev/nats/ingress.yaml
+++ b/dev/nats/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: nats
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
 spec:
