corrected dev/nats

--- a/dev/nats/deployment.yaml
+++ b/dev/nats/deployment.yaml
@@ -17,8 +17,8 @@ spec:
       containers:
       - name: nats
         image: nats
-        command:
-        - "nats server"
+        # command:
+        # - "nats server"
         # - "--user"
         # - "admin"
         # - "--pass"
