--- a/dev/imicros-gateway/ingress.yaml
+++ b/dev/imicros-gateway/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: imicros-gateway
   namespace: default    # namespace must be the same as the backend service!
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     # acme.cert-manager.io/http01-edit-in-place: "true"
