--- a/dev/cassandra/volume.yaml
+++ b/dev/cassandra/volume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: cassandra
+  namespace: cassandra
   labels:
     type: local
     app: cassandra
