--- a/dev/cassandra/volumeClaim.yaml
+++ b/dev/cassandra/volumeClaim.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cassandra
+  namespace: cassandra
 spec:
   storageClassName: manual
   accessModes:
