--- a/dev/cassandra/configMap.yaml
+++ b/dev/cassandra/configMap.yaml
@@ -14,6 +14,6 @@ data:
   run_override.sh: |-
     #!/bin/bash
 
-    /usr/local/apache-cassandra/scripts/jvm_options.sh
-    /opt/bitnami/scripts/cassandra/entrypoint.sh
+    #/usr/local/apache-cassandra/scripts/jvm_options.sh
+    #/opt/bitnami/scripts/cassandra/entrypoint.sh
     /opt/bitnami/scripts/cassandra/run.sh
