--- a/dev/cassandra/deployment.yaml
+++ b/dev/cassandra/deployment.yaml
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: cassandra
         image: bitnami/cassandra:latest
-        command: ['/bin/sh', '-c', '/usr/local/apache-cassandra/scripts/run_override.sh']
+        #command: ['/bin/sh', '-c', '/usr/local/apache-cassandra/scripts/run_override.sh']
         env:
         - name: CASSANDRA_USER
           valueFrom:
