--- a/dev/cassandra/exporter/configMap.yaml
+++ b/dev/cassandra/exporter/configMap.yaml
@@ -7,7 +7,7 @@ metadata:
     app: cassandra-exporter
 data:
   config.yml: |-
-    host: localhost:7199
+    host: cassandra.cassandra.svc.cluster.local:7199
     ssl: False
     user:
     password:
